<resources>
    <string name="app_name">CodeGolf</string>
    <string name="activity_name_puzzle_select">Puzzle Select</string>
    <string name="activity_name_puzzle_scores">Puzzle Scores</string>
    <string name="activity_name_user_login">User Login</string>
    <string name="bullet_example">\u2022 Alan Turing: 450pts</string>
    <string name="all_high_scores">Top scores overall:</string>
    <string name="friends_high_scores">Top scores of your friends:</string>
    <string name="back_to_problems">Back to the problem</string>
    <string name="example_problem_title">Problem #3124 What a day!</string>
    <string name="login_user">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_submit">Submit</string>
    <string name="signing_in">Sign in</string>
    <string name="signing_up">Sign up</string>

    <!--Chris Lukban-->
    <string name="search">search</string>
    <string name="search_hint">Search Puzzle Name</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--Chris Lukban-->

</resources>
